--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ ul li a:hover{
         background-color:rgb(68, 77, 80);
         padding: 3px;
         font-size: 20px;
-        color: black;
+        color: white;
     }
 
 }
