--- a/style.css
+++ b/style.css
@@ -105,4 +105,31 @@ ul li a:hover{
         color: white;
     }
 
+    ul {
+        text-align: left;
+        background-color:rgba(62, 70, 72, 0.887);
+        margin: 0px;
+        margin-top: 1px;
+}
+    
+ul li {
+        margin: 0 10px;
+        line-height: 60px;
+        display:inline;
+        text-decoration: none;
+        font-size: 15px;
+}
+ul li a{
+    color: aliceblue;
+    text-decoration: none;
+    padding-left: 2cm;
+}
+ul li a :hover{
+    color: aqua;
+}
+.sub{
+    padding-left: 7px;
+    margin-bottom: 2cm;
+    font-size: 10px;
+}
 }
